new folder structure & restangular setup

--- a/app/components/home/home.component.html
+++ b/app/components/home/home.component.html
@@ -3,5 +3,5 @@
 </ActionBar>
 
 <GridLayout class="page">
-    <!-- Add your page content here -->
+    <Label text="Let's get some food"></Label>
 </GridLayout>
