--- a/app/components/home/home.component.html
+++ b/app/components/home/home.component.html
@@ -2,6 +2,15 @@
     <Label class="action-bar-title" text="Home"></Label>
 </ActionBar>
 
-<GridLayout class="page">
-    <Label text="Let's get some food"></Label>
-</GridLayout>
+<StackLayout class="page">
+    <TextField hint="Enter text" autocorrect="false" (textChange)="search($event)" (returnPress)="onReturn($event)" class="input input-border"></TextField>
+    <ActivityIndicator #activityIndicator [busy]="isLoading" [visibility]="isLoading?'visible':'collapse'" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+    <ListView [items]="results" (itemTap)="onItemTap($event)" class="list-group">
+        <ng-template let-business="item" >
+            <StackLayout orientation="horizontal" class="list-group-item">
+                <Label text="Business: " textWrap="true"></Label>
+                <Label [text]="business.name"></Label>
+            </StackLayout>
+        </ng-template>
+    </ListView>
+</StackLayout>
